--- a/public/media/style.css
+++ b/public/media/style.css
@@ -7,8 +7,10 @@ body{
 	 width:100%;
 	 height:40px;
 	 margin-top:50px;
-	 margin-left:20%;
 	 padding-top:5px;
+	 display:flex;
+	 flex-direction:row;
+	 justify-content: space-around;
 }
 
 .ssylki {
@@ -25,9 +27,8 @@ body{
 	 }
 
 .etno {
-	 position:relative;
-	 width:50%;
 	 margin-top:-30px;
+	 display: inline-block;
 }
 
 #bodys {
@@ -52,27 +53,26 @@ body{
 .kit {
 	 width:70%;
      position:relative;
-	 margin-left:50%;
 	 margin-top:-350px;
 }
 
 #footer {
 	 background:#353535;
-	 width:1920px;
 	 height:140px;
+	 display:flex;
+	 flex-direction:row;
+	 justify-content:space-around;
 }
 
 .img {
 	 width:20%;
-	 position:absolute;
-	 margin-left:20%;
+	 
 	 padding-top:60px;
 }
 
 .flex {
-	 width:15%;
+	
 	 display:flex;
-	 margin-left:69%;
 	 padding-top:45px;
 }
 
